[package]
name = "uploader-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4" # 处理异步
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Request", "RequestInit", "RequestMode", "Headers", "Window", "Response", "WorkerGlobalScope", "AbortSignal", "DomException"] }
md-5 = "0.10"
sha2 = "0.10" # S3 V4 签名使用 SHA256
hmac = "0.12"
hex = "0.4"
console_error_panic_hook = "0.1.7"